2023-11-30 https://area23.at/froga/
2023-11-30 noscript tag

--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -4,11 +4,11 @@
 	<title>Frog.Web</title>
 	<link rel="stylesheet" href="css/frog.css" />
 	<link rel="shortcut icon" href="https://area23.at/froga/froga.ico" type="image/x-icon" />
-	<script type="text/javascript" src="js/frog23.js"></script>
+	<script type="text/javascript" src="js/frog23.js"></script>	
 </head>
 
 <body class="frogbody" onload="frogInit()">
-	<!-- embed src="Pfad/zur/Datei/sound.mid" autostart="true" loop="true" hidden="true" height="0" width="0"-->
+	<noscript>Your browser does not support JavaScript!</noscript>
 	<div class="froga" align="center">
 		<div class="frogaHeader">
 			<span id="headerLeft" align="right" valign="middle">
@@ -39,7 +39,7 @@
 				</td>
 				<td id="td8f" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole2" cellid="td8g" class="frogaImageWhole" src="img/frogend0t.png" border="0" / >
+					<img id="whole2" cellid="td8g" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
 				</td>
 				<td id="td8h" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
