--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -3,8 +3,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Frog.Web</title>
 	<link rel="stylesheet" href="css/frog.css" />
-	<link rel="shortcut icon" href="https://area23.at/froga/froga.ico" type="image/x-icon" />
-	<script type="text/javascript" src="js/frog23.js"></script>	
+	<link rel="shortcut icon" href="https://area23.at/froga/favicon.ico" type="image/x-icon" />
+	<script type="text/javascript" src="js/froga.js"></script>	
 </head>
 
 <body class="frogbody" onload="frogInit()">
