--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -45,20 +45,6 @@
 				<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8j" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 			</tr>
-			<!-- tr id="tr8" class="frogaTr">
-				<td class="frogaTd" width="8%" height="6%" background="img/meadow0t.png" id="td8a"></td>
-				<td id="td8b" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png">
-					<img id="meadow0t0" cellid="td8b" class="frogaImage" src="img/meadow0t.png" border="0" />
-				</td>
-				<td id="td8c" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8d" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8e" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8f" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8h" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td8j" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-			</tr-->
 			<tr id="tr7" class="frogaTr">
 				<td id="td7a" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
 				<td id="td7b" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-top-color: #5b4b93; border-top-width: 2px; border-top-style: dashed"></td>
@@ -98,21 +84,7 @@
 				</td>
 				<td id="td6i" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
 				<td id="td6j" class="frogaTd" width="8%" height="6%" style="background-color: #8e59ee; border-bottom-color: #5b4b93; border-bottom-width: 2px; border-bottom-style: dashed"></td>
-			</tr>
-			<!-- tr id="tr5" class="frogaTr">
-				<td id="td5a" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png">
-					<img id="meadow0t1" cellid="td5a" class="frogaImage" src="img/meadow0t.png" border="0" />
-				</td>
-				<td id="td5b" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5c" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5d" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5e" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5f" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5g" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5h" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5i" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-				<td id="td5j" class="frogaTd" width="8%" height="6%" background="img/meadow0t.png"></td>
-			</tr -->
+			</tr>			
 			<tr id="tr5" class="frogaTr">
 				<td id="td5a" class="frogaTd" width="8%" height="6%" background="img/walk1m.png"></td>
 				<td id="td5b" class="frogaTd" width="8%" height="6%" background="img/walk1m.png">
@@ -209,19 +181,20 @@
 			</tr>
 		</table>
 		<div class="frogaFooter">
-			<img id="aUp" class="frogaImage" src="img/arrow_up.png" border="0" onclick="frogMove('up')" />
+			<img id="aUp" class="frogaImage" src="img/arrow_up.png" border="0" onclick="moveFrog('up')" />
 		</div>
 		<div class="frogaFooter">
 			<span id="spanLeft" align="left" valign="middle">
-				<img id="aLeft" class="frogaImage" src="img/arrow_left.png" border="0" onclick="frogMove('left')" />
+				<img id="aLeft" class="frogaImage" src="img/arrow_left.png" border="0" onclick="moveFrog('left')" />
 			</span>
 			<span id="spanRight" align="right" valign="middle">
-				<img id="aRight" src="img/arrow_right.png" border="0" onclick="frogMove('right')" />
+				<img id="aRight" src="img/arrow_right.png" border="0" onclick="moveFrog('right')" />
 			</span>
 		</div>
 		<div class="frogaFooter">
-			<img id="aDown" class="frogaImage" src="img/arrow_down.png" border="0" onclick="frogMove('down')" />
+			<img id="aDown" class="frogaImage" src="img/arrow_down.png" border="0" onclick="moveFrog('down')" />
 		</div>
+		<pre id="frogPre"></pre>
 	</div>
 </body>
 </html>
