2023-12-01 frogA web some beep tries

--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -194,7 +194,7 @@
 		<div class="frogaFooter">
 			<img id="aDown" class="frogaImage" src="img/arrow_down.png" border="0" onclick="moveFrog('down')" />
 		</div>
-		<pre id="frogPre"></pre>
+		<!-- pre id="frogPre"></pre -->
 	</div>
 </body>
 </html>
