2023-12-01 froga web x-mas 2023 prae release
x-mas 2023 prae release
https://area23.at/froga/

--- a/frogweb/froga/index.html
+++ b/frogweb/froga/index.html
@@ -172,11 +172,9 @@
 					<img id="frog3" cellid="td1g" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
 				</td>
 				<td id="td1h" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
-				<td id="td1i" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="meadow0b1" cellid="td1i" class="frogaImage" src="img/meadow1b.png" border="0" />
-				</td>
+				<td id="td1i" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td1j" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="meadow0b2" cellid="td1j" class="frogaImage" src="img/meadow3b.png" border="0" />
+					<img id="meadow0b1" cellid="td1j" class="frogaImage" src="img/meadow3b.png" border="0" />
 				</td>
 			</tr>
 		</table>
