2023-12-01 frog web https://area23.at/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -121,26 +121,26 @@
 			</tr>
 			<tr id="tr3" class="frogaTrUpStreet">
 				<td id="td3a" class="frogaTd" width="8%" height="6%" background="img/street0t.png">
-					<img id="car30" cellid="td3a" class="frogaImage" src="img/car1.png" border="0" />
+					<img id="car30" cellid="td3a" class="frogaImage" src="img/car3.gif" border="0" />
 				</td>
 				<td id="td3b" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3c" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3d" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3e" class="frogaTd" width="8%" height="6%" background="img/street0t.png">
-					<img id="car31" cellid="td3e" class="frogaImage" src="img/car1.png" border="0" />
+					<img id="car31" cellid="td3e" class="frogaImage" src="img/car3.gif" border="0" />
 				</td>
 				<td id="td3f" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3g" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3h" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 				<td id="td3i" class="frogaTd" width="8%" height="6%" background="img/street0t.png">
-					<img id="car32" cellid="td3i" class="frogaImage" src="img/car1.png" border="0" />
+					<img id="car32" cellid="td3i" class="frogaImage" src="img/car3.gif" border="0" />
 				</td>
 				<td id="td3j" class="frogaTd" width="8%" height="6%" background="img/street0t.png"></td>
 			</tr>
 			<tr id="tr2" class="frogaTr">
 				<td id="td2a" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
 				<td id="td2b" class="frogaTd" width="8%" height="6%" background="img/street0b.png">
-					<img id="car20" cellid="td2b" class="frogaImage" src="img/car0.png" border="0" />
+					<img id="car20" cellid="td2b" class="frogaImage" src="img/car2.gif" border="0" />
 				</td>
 				<td id="td2c" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
 				<td id="td2d" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
@@ -148,7 +148,7 @@
 				<td id="td2f" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
 				<td id="td2g" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
 				<td id="td2h" class="frogaTd" width="8%" height="6%" background="img/street0b.png">
-					<img id="car21" cellid="td2h" class="frogaImage" src="img/car0.png" border="0" />
+					<img id="car21" cellid="td2h" class="frogaImage" src="img/car2.gif" border="0" />
 				</td>
 				<td id="td2i" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
 				<td id="td2j" class="frogaTd" width="8%" height="6%" background="img/street0b.png"></td>
@@ -160,7 +160,7 @@
 				<td id="td1b" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td1c" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td1d" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="frog0" cellid="td1d" idwood="" class="frogaImage" src="img/frogactive.png" title="ActiveFrog" border="0" />
+					<img id="frog0" cellid="td1d" idwood="" class="frogaImage" src="img/frogActive.gif" title="ActiveFrog" border="0" />
 				</td>
 				<td id="td1e" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
 					<img id="frog1" cellid="td1e" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
@@ -172,11 +172,9 @@
 					<img id="frog3" cellid="td1g" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
 				</td>
 				<td id="td1h" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
-				<td id="td1i" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="meadow0b1" cellid="td1i" class="frogaImage" src="img/meadow1b.png" border="0" />
-				</td>
+				<td id="td1i" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td1j" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="meadow0b2" cellid="td1j" class="frogaImage" src="img/meadow3b.png" border="0" />
+					<img id="meadow0b1" cellid="td1j" class="frogaImage" src="img/meadow3b.png" border="0" />
 				</td>
 			</tr>
 		</table>
@@ -194,6 +192,7 @@
 		<div class="frogaFooter">
 			<img id="aDown" class="frogaImage" src="img/arrow_down.png" border="0" onclick="moveFrog('down')" />
 		</div>
+		<!-- pre id="frogPre"></pre -->
 	</div>
 </body>
 </html>
