--- a/frogweb/froga/frogweb.html
+++ b/frogweb/froga/frogweb.html
@@ -186,7 +186,7 @@
 				<td id="td0b" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td0c" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png"></td>
 				<td id="td0d" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
-					<img id="frog0" cellid="td0d" idwood="" class="frogaImage" src="img/frogactive.png" title="ActiveFrog" border="0" />
+					<img id="frog0" cellid="td0d" idwood="" class="frogaImage" src="img/frogActive.gif" title="ActiveFrog" border="0" />
 				</td>
 				<td id="td0e" class="frogaTd" width="8%" height="6%" background="img/meadow1b.png">
 					<img id="frog1" cellid="td0e" idwood="" class="frogaImage" src="img/frogpassive.png" border="0" />
