2023-12-01 https://area23.at/froga/

--- a/frogweb/froga/frogweb.html
+++ b/frogweb/froga/frogweb.html
@@ -11,7 +11,7 @@
 		<div class="frogaHeader">
 			<span id="headerLeft" align="right" valign="middle">
 				<span id="leftNotes"></span>
-				<span id="frogsInWhole" alt="frogs in whole">0</span>
+				<span id="frogsInHole" alt="frogs in hole">0</span>
 				<span id="frogsLeft" alt="frogs left">4</span>
 				<span id="frogsDied" alt="frogs died">0</span>
 			</span>
@@ -28,16 +28,16 @@
 			<tr id="tr9" class="frogaTr">
 				<td id="td9a" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td9b" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td9c" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole0" cellid="td9c" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td9c" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole0" cellid="td9c" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td9d" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td9e" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole1" cellid="td9e" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td9e" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole1" cellid="td9e" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td9f" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td9g" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole2" cellid="td9g" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td9g" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole2" cellid="td9g" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td9h" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td9i" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
