--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -13,7 +13,7 @@
 		<div class="frogaHeader">
 			<span id="headerLeft" align="right" valign="middle">
 				<span id="leftNotes"></span>
-				<span id="frogsInWhole" alt="frogs in whole">0</span>
+				<span id="frogsInHole" alt="frogs in hole">0</span>
 				<span id="frogsLeft" alt="frogs left">4</span>
 				<span id="frogsDied" alt="frogs died">0</span>
 			</span>
@@ -30,16 +30,16 @@
 			<tr id="tr8" class="frogaTr">
 				<td id="td8a" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8b" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td8c" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole0" cellid="td8c" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td8c" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole0" cellid="td8c" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8d" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td8e" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole1" cellid="td8e" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td8e" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole1" cellid="td8e" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8f" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
-				<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/frogend0t.png">
-					<img id="whole2" cellid="td8g" class="frogaImageWhole" src="img/frogend0t.png" border="0" />
+				<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
+					<img id="hole2" cellid="td8g" class="frogaImageHole" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8h" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
