2023-12-01 frob web https://www.darkstar.work/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -4,7 +4,7 @@
 	<title>Frog.Web</title>
 	<link rel="stylesheet" href="css/frog.css" />
 	<link rel="shortcut icon" href="https://area23.at/froga/favicon.ico" type="image/x-icon" />
-	<script type="text/javascript" src="js/froga.js"></script>
+	<script type="text/javascript" src="js/frog.js"></script>
 </head>
 
 <body class="frogbody" onload="frogInit()">
