2023-12-01 frog web decembre release https://darkstar.work/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -31,15 +31,15 @@
 				<td id="td8a" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8b" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8c" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
-					<img id="hole0" cellid="td8c" class="frogaImageHole" src="img/frogHole.png" border="0" />
+					<img id="hole0" cellid="td8c" class="frogaImage" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8d" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8e" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
-					<img id="hole1" cellid="td8e" class="frogaImageHole" src="img/frogHole.png" border="0" />
+					<img id="hole1" cellid="td8e" class="frogaImage" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8f" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8g" class="frogaTd" width="8%" height="6%" background="img/frogHole.png">
-					<img id="hole2" cellid="td8g" class="frogaImageHole" src="img/frogHole.png" border="0" />
+					<img id="hole2" cellid="td8g" class="frogaImage" src="img/frogHole.png" border="0" />
 				</td>
 				<td id="td8h" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
 				<td id="td8i" class="frogaTd" width="8%" height="6%" background="img/swamp0t.png"></td>
