2023-12-14 frogWeb https://area23.at/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -88,21 +88,21 @@
 			<tr id="tr5" class="frogaTr">
 				<td id="td5a" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5b" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png">
-					<img id="person0" cellid="td5b" class="frogaImage" src="res/img/walk4m.png" border="0" />
+					<img id="person0" cellid="td5b" class="frogaImage" src="res/img/walk2m.gif" border="0" />
 				</td>
 				<td id="td5c" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5d" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png">
-					<img id="person1" cellid="td5d" class="frogaImage" src="res/img/walk5m.png" border="0" />
+					<img id="person1" cellid="td5d" class="frogaImage" src="res/img/walk5m.gif" border="0" />
 				</td>
 				<td id="td5e" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5f" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5g" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png">
-					<img id="person2" cellid="td5g" class="frogaImage" src="res/img/walk6m.png" border="0" />
+					<img id="person2" cellid="td5g" class="frogaImage" src="res/img/walk6m.gif" border="0" />
 				</td>
 				<td id="td5h" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5i" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png"></td>
 				<td id="td5j" class="frogaTd" width="8%" height="6%" background="res/img/walk1m.png">
-					<img id="person3" cellid="td5j" class="frogaImage" src="res/img/walk3m.png" border="0" />
+					<img id="person3" cellid="td5j" class="frogaImage" src="res/img/walk3m.gif" border="0" />
 				</td>
 			</tr>
 			<tr id="tr4" class="frogaTr">
