2023-12-14 froga web https://area23.at/froga/ https://darkstar.work/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -163,13 +163,13 @@
 					<img id="frog0" cellid="td1d" idwood="" class="frogaImage" src="res/img/frogActive.gif" title="ActiveFrog" border="0" />
 				</td>
 				<td id="td1e" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png">
-					<img id="frog1" cellid="td1e" idwood="" class="frogaImage" src="res/img/frogpassive.png" border="0" />
+					<img id="frog1" cellid="td1e" idwood="" class="frogaImage" src="res/img/frogInActive.png" border="0" />
 				</td>
 				<td id="td1f" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png">
-					<img id="frog2" cellid="td1f" class="frogaImage" src="res/img/frogpassive.png" border="0" idwood="" />
+					<img id="frog2" cellid="td1f" class="frogaImage" src="res/img/frogInActive.png" border="0" idwood="" />
 				</td>
 				<td id="td1g" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png">
-					<img id="frog3" cellid="td1g" idwood="" class="frogaImage" src="res/img/frogpassive.png" border="0" />
+					<img id="frog3" cellid="td1g" idwood="" class="frogaImage" src="res/img/frogInActive.png" border="0" />
 				</td>
 				<td id="td1h" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png"></td>
 				<td id="td1i" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png"></td>
