2023-12-15 froga web x-mas level completed & game over sounds https://darkstar.work/froga/

--- a/frogweb/froga/frogweb.htm
+++ b/frogweb/froga/frogweb.htm
@@ -341,14 +341,16 @@
                     headerImg.src = "res/img/levelperfect.gif"
                 headerImg.height = 36;
                 level++;
+                setTimeout(function () { frogSound("res/audio/levelCompleted.mp3") }, 100);
                 setTimeout(function () { frogReStart(false); }, 4000); // will call the function after 8 secs.
                 return;
             }
             // game over
-            if (currentFrog == null) {
+            if (currentFrog == null || frogsDied > 3) {
                 headerImg.src = "res/img/gameover.png";
                 headerImg.height = 36;
                 gameOver = 1;
+                setTimeout(function () { frogSound("res/audio/frogaGameOver.mp3") }, 100);
                 setTimeout(function () { frogReStart(true); }, 5000); // will call the function after 8 secs.
                 return;
             }
@@ -774,7 +776,7 @@
             setTimeout(function () {
                 leftNotes.innerHTML = " ♪";
                 rightNotes.innerHTML = "♫ ";
-            }, 500);
+            }, 800);
 
             setTimeout(function () {
                 leftNotes.innerHTML = "  ";
@@ -788,7 +790,7 @@
                     sound = null;
                 } catch (exSnd) {
                 }
-            }, 900);
+            }, 1300);
 
         }
 
