2024-01-08 animated symbols for frogs left frogs died frogs in hole
https://area23.at/froga/

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -13,9 +13,9 @@
 		<div class="frogaHeader">
 			<span id="headerLeft" align="right" valign="middle">
 				<span id="leftNotes"></span>
-				<span id="frogsInHole" alt="frogs in hole">0</span>
-				<span id="frogsLeft" alt="frogs left">4</span>
-				<span id="frogsDied" alt="frogs died">0</span>
+				<img class="frogsInImg" alt="frogs left" src="res/img/frogsLeftCount.png" /><span id="frogsLeft" alt="frogs left">4</span>
+				<img class="frogsInImg" alt="frogs died" src="res/img/frogsDiedCount.png" /><span id="frogsDied" alt="frogs died">0</span>
+				<img class="frogsInImg" alt="frogs in hole" src="res/img/frogsInHoleCount.png" /><span id="frogsInHole" alt="frogs in hole">0</span>
 			</span>
 			<span id="headerCenter" align="center" valign="middle">
 				<img class="headerImage" src="res/img/header.png" id="headerImg" border="0" onclick="restart()" />
