2024-01-08 https://darkstar.work/froga/

--- a/frogweb/froga/frogweb.htm
+++ b/frogweb/froga/frogweb.htm
@@ -436,10 +436,14 @@
                 if (newTd == frogTd) {
                     currentFrog.id = "died" + frogNr;
                     document.getElementById(newTd).removeChild(currentFrog);
+
                     car.src = "res/img/car3crashed.png"
                     changeImagePlaySound(car, "res/img/car3crashed.png", "res/audio/frogCrash.ogg");
-                    currentFrog = getActiveFrog();
-                    currentFrogId = getCurrentFrogId(currentFrog);
+
+                    // currentFrog & currentFrogId will be fetched in setFrogsDied
+                    setFrogsDied(++frogsDied);
+                    // currentFrog = getActiveFrog();
+                    // currentFrogId = getCurrentFrogId(currentFrog)
                 }
 
                 document.getElementById(oldTd).removeChild(car);
@@ -461,10 +465,14 @@
                 if (newTd == frogTd) {
                     currentFrog.id = "died" + frogNr;
                     document.getElementById(newTd).removeChild(currentFrog);
+
                     car.src = "res/img/car3crashed.png"
                     changeImagePlaySound(car, "res/img/car2crashed.png", "res/audio/frogCrash.ogg");
-                    currentFrog = getActiveFrog();
-                    currentFrogId = getCurrentFrogId(currentFrog);
+
+                    // currentFrog & currentFrogId will be fetched in setFrogsDied
+                    setFrogsDied(++frogsDied);
+                    // currentFrog = getActiveFrog();
+                    // currentFrogId = getCurrentFrogId(currentFrog);
                 }
 
                 document.getElementById(oldTd).removeChild(car);
@@ -507,10 +515,14 @@
                 if (newTd == frogTd) {
                     currentFrog.id = "died" + frogNr;
                     document.getElementById(newTd).removeChild(currentFrog);
+
                     walk.src = "res/img/walk0m.gif"
                     changeImagePlaySound(walk, "res/img/walk0m.gif", "res/audio/frogJump.ogg");
-                    currentFrog = getActiveFrog();
-                    currentFrogId = getCurrentFrogId(currentFrog);
+
+                    // currentFrog & currentFrogId will be fetched in setFrogsDied
+                    setFrogsDied(++frogsDied);
+                    // currentFrog = getActiveFrog();
+                    // currentFrogId = getCurrentFrogId(currentFrog);
                 }
 
                 document.getElementById(oldTd).removeChild(walk);
@@ -735,6 +747,8 @@
                 imgDisApear = null;
                 while (imgDisApear == null && woodIt < frogHoleMax) {
                     imgDisApear = document.getElementById(newTd).children["hole" + woodIt];
+                    if (imgDisApear == null)
+                        imgDisApear = document.getElementById(newTd).children["save" + woodIt];
                     if (imgDisApear != null && imgDisApear.src != null) {
                         let idaLen = imgDisApear.src.length;
                         if ((imgDisApear.src.substr(idaLen - 27) == "res/img/frogTwiceInHole.gif") ||
@@ -769,16 +783,21 @@
 
             newFrog.setAttribute("cellid", newTd);
 
-            if (imgDisApear != null) {
-                document.getElementById(newTd).removeChild(imgDisApear);
-            }
+            // if (imgDisApear != null) 
+            //    document.getElementById(newTd).removeChild(imgDisApear);
 
             if (frogsInHole >= 3 || (frogCrashed) < 0) {
-                document.getElementById(newTd).appendChild(newFrog);
+                if (imgDisApear != null) {
+                    replaceImg(imgDisApear, newFrog);
+                    // document.getElementById(newFrog.id).parentElement.removeChild(newFrog);
+                }
+                else {
+                    document.getElementById(newTd).appendChild(newFrog);
+                }
             } else {
-                currentFrog = getActiveFrog();
-                currentFrogId = getCurrentFrogId()
                 frogDied = frogCrashed;
+                if (imgDisApear != null)
+                    document.getElementById(newTd).removeChild(imgDisApear);
             }
 
             if (frogDied > -1)
@@ -787,7 +806,6 @@
             if (imgReApear != null) {
                 document.getElementById(oldTd).appendChild(imgReApear);
             }
-
 
             if (frY == 6 && (nrY <= 4 || nrY >= 7))
                 imgSavedWoodB = null;
@@ -1086,6 +1104,8 @@
 
         function setFrogsDied(frogsDied) {
             document.getElementById("frogsDied").innerHTML = frogsDied;
+            currentFrog = getActiveFrog();
+            currentFrogId = getCurrentFrogId(currentFrog);
         }
 
         function setLevel(frogLevel) {
@@ -1223,6 +1243,40 @@
 
             }
             return imgD;
+        }
+
+
+        // replaces imgOrig with imgFrom, copies all attributes and removes imgFrom from document
+        function replaceImg(imgOrig, imgFrom) {
+            if (imgOrig != null && imgOrig.id != null && imgOrig.src != null &&
+                imgFrom != null && imgFrom.id != null && imgFrom.src != null) {
+                var tmpId = imgFrom.id;
+                imgFrom.id = tmpId + "_1";
+                imgOrig.id = tmpId;
+                imgOrig.src = imgFrom.src;
+                imgOrig.width = imgFrom.width;
+                imgOrig.height = imgFrom.height;
+                imgOrig.alt = imgFrom.alt;
+                if (imgFrom.getAttribute("title") != null)
+                    imgOrig.setAttribute("title", imgFrom.getAttribute("title"));
+                if (imgFrom.getAttribute("className") != null)
+                    imgOrig.setAttribute("className", imgFrom.getAttribute("className"));
+                imgOrig.setAttribute("class", imgFrom.getAttribute("class"));
+                // we leave cellid from imgOrig unchanged
+                // if (imgFrom.getAttribute("cellid") != null)
+                //    imgOrig.setAttribute("cellid", imgFrom.getAttribute("cellid"));
+                if (imgFrom.getAttribute("idwood") != null)
+                    imgOrig.setAttribute("idwood", imgFrom.getAttribute("idwood"));
+                imgOrig.setAttribute("border", 0);
+
+                if (document.getElementById(imgFrom.id) != null && document.getElementById(imgFrom.id).parentElement != null) {
+                    try {
+                        document.getElementById(imgFrom.id).parentElement.removeChild(imgFrom);
+                    } catch (e) {
+                        alert(e);
+                    }
+                }
+            }
         }
 
     </script>
