2024-03-10 tested android HMD Global Nokia G22 Android 12 API 31

--- a/frogweb/froga/froga.html
+++ b/frogweb/froga/froga.html
@@ -2,9 +2,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Frog.Web</title>
-	<link rel="stylesheet" href="res/css/frog.css" />
+	<link rel="stylesheet" href="res/css/frga.css" />
 	<link rel="shortcut icon" href="https://area23.at/froga/favicon.ico" type="image/x-icon" />
-	<script type="text/javascript" src="res/js/frog.js"></script>
+	<script type="text/javascript" src="res/js/frga.js"></script>
 </head>
 
 <body class="frogbody" onload="frogInit()">
@@ -26,7 +26,7 @@
 				<span id="rightNotes"></span>
 			</span>
 		</div>
-		<table class="frogaTable" border="0" cellpadding="0" cellpadding="0">
+		<table class="frogaTable" border="0" cellpadding="0" cellspacing="0">
 			<tr id="tr8" class="frogaTr">
 				<td id="td8a" class="frogaTd" width="8%" height="6%" background="res/img/swamp0t.png"></td>
 				<td id="td8b" class="frogaTd" width="8%" height="6%" background="res/img/swamp0t.png"></td>
@@ -120,38 +120,38 @@
 				<td id="td4j" class="frogaTd" width="8%" height="6%" style="background-color: #0d9843;"></td>
 			</tr>
 			<tr id="tr3" class="frogaTrUpStreet">
-				<td id="td3a" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png">
+				<td id="td3a" class="upStreetTd" width="8%" height="6%">
 					<img id="car30" cellid="td3a" class="frogaImage" src="res/img/car3.gif" border="0" />
 				</td>
-				<td id="td3b" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3c" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3d" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3e" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png">
+				<td id="td3b" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3c" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3d" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3e" class="upStreetTd" width="8%" height="6%">
 					<img id="car31" cellid="td3e" class="frogaImage" src="res/img/car3.gif" border="0" />
 				</td>
-				<td id="td3f" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3g" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3h" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
-				<td id="td3i" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png">
+				<td id="td3f" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3g" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3h" class="upStreetTd" width="8%" height="6%"></td>
+				<td id="td3i" class="upStreetTd" width="8%" height="6%">
 					<img id="car32" cellid="td3i" class="frogaImage" src="res/img/car3.gif" border="0" />
 				</td>
-				<td id="td3j" class="frogaTd" width="8%" height="6%" background="res/img/street0t.png"></td>
+				<td id="td3j" class="upStreetTd" width="8%" height="6%"></td>
 			</tr>
 			<tr id="tr2" class="frogaTr">
-				<td id="td2a" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2b" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png">
+				<td id="td2a" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2b" class="downStreetTd" width="8%" height="6%">
 					<img id="car20" cellid="td2b" class="frogaImage" src="res/img/car2.gif" border="0" />
 				</td>
-				<td id="td2c" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2d" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2e" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2f" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2g" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2h" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png">
+				<td id="td2c" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2d" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2e" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2f" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2g" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2h" class="downStreetTd" width="8%" height="6%">
 					<img id="car21" cellid="td2h" class="frogaImage" src="res/img/car2.gif" border="0" />
 				</td>
-				<td id="td2i" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
-				<td id="td2j" class="frogaTd" width="8%" height="6%" background="res/img/street0b.png"></td>
+				<td id="td2i" class="downStreetTd" width="8%" height="6%"></td>
+				<td id="td2j" class="downStreetTd" width="8%" height="6%"></td>
 			</tr>
 			<tr id="tr1" class="frogaTr">
 				<td id="td1a" class="frogaTd" width="8%" height="6%" background="res/img/meadow1b.png">
